fix: fix enum